SERVER-64554 the abortIndexBuild oplog entry drops unfinished indexes when run with --recoverFromOplogAsStandalone